udpate post
