# docs/swagger.json
@@ -3556,6 +3556,47 @@
                 }
             }
         },
+        "/posts/public": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Returns a list of posts",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "posts"
+                ],
+                "summary": "Get post list",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/post.PaginatedResponse-any"
+                        }
+                    }
+                }
+            }
+        },
         "/posts/slug/{id}": {
             "get": {
                 "security": [
@@ -5466,6 +5507,9 @@
                 "title"
             ],
             "properties": {
+                "file": {
+                    "type": "string"
+                },
                 "slug": {
                     "type": "string"
                 },
@@ -5517,6 +5561,9 @@
                 "title"
             ],
             "properties": {
+                "file": {
+                    "type": "string"
+                },
                 "slug": {
                     "type": "string"
                 },
